feat : 공연ID 목록 가져와서 상세정보 가져오기 기능